<resources>
    <string name="app_name">FuelCalc</string>
    <string name="back">Back</string>
    <string name="settings">Settings</string>
    <string name="donate">Donate</string>
    <string name="about_us">About us</string>
    <string name="help">Help</string>
    <string name="reset_fuel_list_to_default">Reset fuel list to default</string>
    <string name="add_fuel">Add fuel</string>
    <string name="night_mode">Night mode</string>
    <string name="info">Info</string>
    <string name="fuel_list_settings">Fuel-list settings</string>
    <string name="switch_theme">Switch theme</string>
    <string name="dalog_reset_title">Are you sure?</string>
    <string name="off">off</string>
    <string name="on">on</string>
    <string name="reset">RESET</string>
    <string name="add">ADD</string>
    <string name="about">ABOUT</string>
    <string name="nightmode">NIGHTMODE</string>
    <string name="help_text">How to use the application\n\nTouch a fuel name in list of fuels to
        make it base and input the volume/mass into the text field on the top of the screen. For
        each fuel application will automatically count amount you should take to get the same amount
        of energy.\n\nTap arrow on the right of each fuel in the list to see more information about
        it. Use "delete" button to remove fuel from the list.\n\nYou can add new fuel by pressing
        "add fuel" button.\n\n!!Warning!!\n\nPressing "Reset fuel list to default" button will delete
        all fuel types You added and fill the list with default fuel types.</string>
    <string name="close_window">Close</string>
    <string name="help_title">Help</string>
    <string name="about_us_title">About us</string>
    <string name="about_info">Software development, neural networks design, blockchain development. \n\nWe have long been engaged in research and development of a distributed system. The study of artificial intelligence and data. We are a team of developers and mathematicians. We are proud to be a part of the new world, the era of artificial intelligence, new computing models. We change this world with you! \n\nContacts \nCell: +1–424-344-8272 \nEmail: odbandatech@gmail.com</string>
    <string name="caloricity_string">Caloricity: %1$s</string>
    <string name="price_string">Price: %1$s</string>
</resources>
