<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/item1"
        android:title="@string/help"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/item2"
        android:icon="@android:drawable/ic_menu_call"
        android:title="@string/about_us"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/item3"
        android:icon="@android:drawable/ic_menu_info_details"
        android:title="@string/donate"
        app:showAsAction="never">
    </item>
    <item
        android:id="@+id/Settings"
        android:icon="@drawable/ic_settings_button_dark"
        android:title="@string/settings"
        app:showAsAction="ifRoom">
    </item>
</menu>