<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="30dp"
    android:layout_marginTop="30dp"
    android:background="@color/bggray"
    android:orientation="vertical">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="8dp">


        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:src="@drawable/ic_baseline_help_outline_24px"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"/>

        <TextView
            android:id="@+id/about_us_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="start"
            android:layout_marginStart="4dp"
            android:text="@string/about_us_title"
            android:textColor="@color/Black"
            android:textSize="24sp" />

    </LinearLayout>


    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="4dp"
        android:layout_weight="0.8">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="4dp"
            android:text="@string/about_us"
            android:textColor="@color/Black"
            android:textSize="18sp" />

    </ScrollView>


    <Button
        android:id="@+id/about_us_dialog_close_btn"
        android:layout_width="wrap_content"
        android:layout_gravity="right"
        android:layout_height="0dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="2dp"
        android:layout_weight="0.2"
        android:background="@null"
        android:text="@string/close_window"
        android:textColor="@color/Black"
        android:textSize="18sp" />

</LinearLayout>